--- a/CSS/style1.css
+++ b/CSS/style1.css
@@ -70,7 +70,7 @@ hr {
     width: 98%;
 }
 .container, .container1 {
-    display: inline-block;
+    display: inline-grid;
     border: 200px;
     box-sizing: border-box;
     border-radius: 10px;            
@@ -78,6 +78,7 @@ hr {
     font-size: 20px;
     margin: 10px;
     max-width: 300px;
+    height: 300px;
     padding: 15px;
     padding-top: 5px;   
     color: rgba(245, 245, 245, 0.815);
@@ -96,6 +97,7 @@ body{
 p{
     padding: 1px ;
     text-align: center;
+    height: 146px;
 }
 h3{
     text-align: center;
